# macrokit

./: Cargo.toml  LICENSE  README.md
examples/: simple.rs
src/: lib.rs
src/macros/: from_repr.rs  mod.rs
src/macros/doc_macros/: enum_macro.rs  mod.rs
tests/: from_repr.rs
tests/ui/: missing_unknown.rs  missing_unknown.stderr
